update some configs

--- a/configs/index.html
+++ b/configs/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Page Name</title>
-        <script type="module" src="/src/ui/elements/app.element.ts"></script>
-        <link rel="stylesheet" type="text/css" href="index.css" />
+        <script type="module" src="/src/ui/elements/vir-app.element.ts"></script>
+        <link rel="stylesheet" type="text/css" href="/index.css" />
     </head>
     <body>
         <vir-app></vir-app>
