improve base vite config

--- a/configs/src/index.html
+++ b/configs/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Page Name</title>
-        <script type="module" src="/src/ui/elements/vir-app.element.ts"></script>
+        <script type="module" src="./ui/elements/vir-app.element.ts"></script>
         <link rel="stylesheet" type="text/css" href="/index.css" />
     </head>
     <body>
